Bug 85400 - Fix warning on unused variable in pdftocairo.cc
Summary: Fix warning on unused variable in pdftocairo.cc
Status: RESOLVED FIXED
Alias: None
Product: poppler
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: All All
: medium normal
Assignee: poppler-bugs
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-10-24 09:40 UTC by Hib Eris
Modified: 2014-10-24 09:53 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Fix warning on unused variable in pdftocairo.cc (988 bytes, patch)
2014-10-24 09:40 UTC, Hib Eris
Details | Splinter Review

Description Hib Eris 2014-10-24 09:40:08 UTC
Fixes warning:

  CXX      pdftocairo-pdftocairo.o
pdftocairo.cc:130:14: warning: ‘setupdlg’ defined but not used [-Wunused-variable]
 static GBool setupdlg = gFalse;
              ^
Comment 1 Hib Eris 2014-10-24 09:40:10 UTC
Created attachment 108344 [details] [review]
Fix warning on unused variable in pdftocairo.cc
Comment 2 Adrian Johnson 2014-10-24 09:53:33 UTC
Pushed


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.