Fix warning on unused variable in pdftocairo.cc

Fixes warning:

  CXX      pdftocairo-pdftocairo.o
pdftocairo.cc:130:14: warning: ‘setupdlg’ defined but not used [-Wunused-variable]
 static GBool setupdlg = gFalse;
              ^

https://bugs.freedesktop.org/show_bug.cgi?id=85400